[package]
name = "haumaru"
version = "0.0.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[dependencies]
haumaru_api = { path = "api" }
log = "*"
env_logger = "*"
time = "*"
clap = "*"

[replace]
"openssl:0.7.14" = { git = "https://github.com/shanegibbs/rust-openssl", branch = "v0.7.14-patched" }

[[bin]]
doc = false
name = "haumaru"
path = "src/bin/haumaru.rs"
