[package]
name = "haumaru_api"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[dependencies]
log = "*"
notify = "*"
rusqlite = "0.7.3"
time = "*"
chrono = "0.2"
rust-crypto = "*"
rustc-serialize = "*"
env_logger = "*"
regex = "*"
serde = "^0.7"
serde_macros = "^0.7"
serde_yaml = "^0.2"
hyper = "0.9"
lazy_static = "*"
threadpool = "*"