[package]
name = "haumaru_api"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[dependencies]
log = "*"
notify = "*"
rusqlite = "*"
time = "*"
chrono = "*"
rust-crypto = "*"
rustc-serialize = "*"
env_logger = "*"
regex = "*"
serde = "*"
serde_macros = "*"
serde_yaml = "*"
hyper = "*"
lazy_static = "*"
threadpool = "*"