[package]
name = "haumaru-api"
version = "0.1.0"
authors = ["Shane Gibbs <shane@hands.net.nz>"]

[dependencies]
log = "*"
notify = "2.6"
rusqlite = "*"
time = "*"
chrono = "*"
rust-crypto = "*"
rustc-serialize = "*"
env_logger = "*"
regex = "*"
serde = "0.8"
serde_derive = "0.8"
serde_yaml = "0.5"
hyper = "*"
lazy_static = "*"
threadpool = "*"